<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/body"
    android:background="#e8defa"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/back"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:text="@string/init_message"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prompt" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="327dp"
        android:layout_height="181dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/trivia"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prompt" />

    <EditText
        android:id="@+id/input"
        android:hint="Your Response"
        android:layout_width="190sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_suggest"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_suggest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#AE8FB1"
        android:onClick="suggest"
        android:text="@string/suggest"
        app:layout_constraintLeft_toRightOf="@id/input"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#344648"
        android:onClick="submit"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="#D7CCEC"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_submit">

        <TextView
            android:id="@+id/settings_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@id/grassland"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/categories_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@id/appearance"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/grassland"
            app:layout_constraintTop_toBottomOf="@id/settings_label"
            app:layout_constraintVertical_bias="0.631" />

        <CheckBox
            android:id="@+id/grassland"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:buttonTint="#948e92"
            android:checked="true"
            android:onClick="categoryChecked"
            android:text="@string/category_one"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/appearance"
            app:layout_constraintLeft_toRightOf="@id/categories_label"
            app:layout_constraintRight_toLeftOf="@+id/arctic"
            app:layout_constraintTop_toBottomOf="@id/settings_label" />

        <CheckBox
            android:id="@+id/arctic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:buttonTint="#948e92"
            android:checked="true"
            android:onClick="categoryChecked"
            android:text="@string/category_two"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/appearance"
            app:layout_constraintLeft_toRightOf="@id/grassland"
            app:layout_constraintRight_toLeftOf="@+id/aquatic"
            app:layout_constraintTop_toBottomOf="@id/settings_label" />

        <CheckBox
            android:id="@+id/aquatic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:buttonTint="#948e92"
            android:checked="true"
            android:onClick="categoryChecked"
            android:text="@string/category_three"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/appearance"
            app:layout_constraintLeft_toRightOf="@+id/arctic"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings_label" />

        <TextView
            android:id="@+id/themes_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/themes"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/appearance"
            app:layout_constraintTop_toBottomOf="@id/grassland" />

        <RadioGroup
            android:id="@+id/appearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grassland">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#948e92"
                android:onClick="set_theme1"
                android:textColor="@color/black"
                android:text="@string/theme_one" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#948e92"
                android:onClick="set_theme2"
                android:textColor="@color/black"
                android:text="@string/theme_two" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>